# yad

./: yad.code-workspace
apps/desktop/yadd/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/yadd/src-tauri/lib/: Cargo.toml
apps/desktop/yadd/src-tauri/lib/src/: lib.rs
apps/desktop/yadd/src-tauri/lib/src/datastore/: database.rs  entity.rs  macros.rs  mod.rs  persistent.rs
apps/desktop/yadd/src-tauri/lib/src/platform/: mod.rs
apps/desktop/yadd/src-tauri/lib/src/platform/mac/: mod.rs
apps/desktop/yadd/src-tauri/src/: main.rs
browser/extension/: manifest.json
extensions/chrome/: service-worker.js
flutter/app/: README.md  pubspec.yaml
flutter/app/lib/: app.module.dart  main.dart
flutter/app/lib/app/: async_provider.dart
flutter/app/lib/app/db/: provider.dart
flutter/app/lib/workspace/: model.dart  model.g.dart  repository.dart
flutter/app/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter/app/macos/Runner/: AppDelegate.swift  Info.plist
flutter/app/macos/Runner.xcodeproj/: project.pbxproj
flutter/app/macos/Runner/Configs/: AppInfo.xcconfig
flutter/yad_watcher/: .metadata  README.md  pubspec.yaml
flutter/yad_watcher/example/: README.md  pubspec.yaml
flutter/yad_watcher/example/lib/: main.dart
flutter/yad_watcher/example/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter/yad_watcher/example/macos/Runner.xcodeproj/: project.pbxproj
flutter/yad_watcher/example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter/yad_watcher/example/macos/Runner/Configs/: AppInfo.xcconfig
flutter/yad_watcher/example/test/: widget_test.dart
flutter/yad_watcher/lib/: model.dart  yad_watcher.dart  yad_watcher_method_channel.dart  yad_watcher_platform_interface.dart
flutter/yad_watcher/macos/: yad_watcher.podspec
flutter/yad_watcher/macos/Classes/: ApplicationActivation.swift  Data.swift  Date.swift  EventChannelHandler.swift  NSRunningApplication.swift  YadResult.swift  YadWatcher.swift  YadWatcherError.swift  YadWatcherPlugin.swift
flutter/yad_watcher/test/: yad_watcher_method_channel_test.dart  yad_watcher_test.dart
rust/: Cargo.toml  README.md
rust/core/: Cargo.toml
rust/core/src/caldav/: parameters.rs
rust/core/src/caldav/components/: event.rs
rust/core/src/caldav/event/: mod.rs
rust/core/src/caldav/properties/: component.rs  mod.rs  uid.rs
rust/core/src/types/: mod.rs
rust/mac_watcher/: Cargo.toml
rust/server/: Cargo.toml
rust/server/src/: lib.rs  main.rs
rust/server/src/api/: mod.rs
rust/server/src/api/rpc/: activity.rs  mod.rs
rust/server/src/app/: mod.rs
rust/server/src/app/api/: mod.rs
rust/server/src/app/app/: mod.rs
rust/server/src/db/: mod.rs
rust/server/src/domain/: mod.rs  types.rs
rust/server/src/domain/activity/: entity.rs  mod.rs  operations.rs
rust/yad_mac_agent/: Cargo.toml
rust/yad_mac_agent/src/: main.rs
rust/yad_mac_agent/src/app/: event.rs  mod.rs  observer.rs  server.rs
rust/yad_mac_observer/: Cargo.toml
rust/yad_mac_observer/examples/: usage.rs
rust/yad_mac_observer/src/: common.rs  lib.rs
rust/yad_net/: Cargo.toml
rust/yad_net/src/: rpc.rs
rust/yad_scope_tracking/: Cargo.toml
rust/yad_scope_tracking/src/: lib.rs  model.rs  rpc.rs  state.rs
rust/yad_scope_tracking/src/operations/: mod.rs  track_application_change.rs
rust/yad_storage/: Cargo.toml
rust/yad_storage/src/: database.rs  entity.rs  lib.rs  persistent.rs  repository.rs
rust/yad_tracking_scope/: Cargo.toml
rust/yad_tracking_scope/src/: lib.rs  net.rs  processor.rs  rpc.rs
