[workspace]
members = [
    "core",
    "server",
    "yad_mac_agent",
    "yad_scope_tracking",
    "yad_net",
    "yad_storage"
]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"

async-trait = "0.1.61"
async-std = { version = "1", features=["tokio1", "attributes"] }

jsonrpsee = { version = "0.16"}
salvo = { version = "0.37.9"}

serde = "1"
serde_json = "1"

entrait = { version = "0.5", features = ["use-boxed-futures", "unimock"] }
entrait_macros = "0.5"
unimock = "0.4"

chrono = "0.4"

yad-net = {path = "yad_net"}
yad-storage = { path = "yad_storage"}

[profile.release]
debug = true
