[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

uriparse = "0.6.4"
chrono = "0.4.23"
chrono-tz = "0.8.1"
rrule = "0.10.0"
semver = "1.0"
language-tags = "0.3.2"
geo = "0.23.1"
nanoid = "0.4.0"
serde = "1.0.152"
serde_json = "1.0.91"
entrait = { version = "0.5.2", features = ["use-boxed-futures", "unimock"] }
entrait_macros = "0.5.2"
unimock = "0.4.9"