[package]
name = "yad-mac-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cacao = "0.3.2"
objc_id = "0.1.1"
objc-foundation = "0.1.1"
async-std = { version = "1", features=["tokio1"] }
salvo = "0.37"
lazy_static = "1.4"
flume = "0.10"
chrono = {workspace = true}