[package]
name = "yad-mac-observer"
version = "0.1.0"
edition = "2021"

[[example]]
name = "usage"

[dependencies]
objc = "0.2.7"
objc_id = "0.1.1"
cocoa = "0.24.1"
cacao = "0.3.2"
objc-foundation = "0.1.1"
serde = { version = "1", features = ["derive"]  }
lazy_static = "1.4.0"
flume = "0.10.14"
chrono = "0.4.23"
#https://docs.rs/thingbuf/0.1.3/thingbuf/mpsc/index.html
#thingbuf = "0.1.3"
