[package]
name = "yad-scope-tracking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.61"
async-std = { version = "1", features=["tokio1", "attributes"] }
jsonrpsee = { workspace = true, features=["server", "macros"] }
salvo = { workspace = true, features=["affix"] }
anyhow = "1"
entrait = "0.5"
unimock = "0.4"
rlink = "0.6"
serde = "1"
thiserror = "1.0.38"
yad-net = {workspace = true}
yad-storage = {workspace = true}
chrono = "0.4.23"

[dev-dependencies]
reqwest = "0.11.13"