[package]
name = "yad-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
thiserror = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
entrait = {workspace = true}
async-std = {workspace = true}
acid-store = {version = "0.13.0", features = ["repo-value"] }
derive_builder = "0.12.0"
async-trait = "0.1.63"

surrealdb = "1.0.0-beta.8"